[package]
name = "scrap"
description = "Screen capture made easy."
version = "0.5.0"
repository = "https://github.com/quadrupleslap/scrap"
documentation = "https://docs.rs/scrap"
keywords = ["screen", "capture", "record"]
license = "MIT"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
block = "0.1"
cfg-if = "0.1"
libc = "0.2"
winapi = {version="0.3", features=["dxgi", "dxgi1_2" , "d3dcommon", "d3d11", "winerror" ]}

[dev-dependencies]
repng = "0.2"
